--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,9 +61,18 @@
             android:label="@string/app_name" >
 
         </activity>
+
+
         <activity
             android:theme="@style/AppTheme"
             android:name=".PostedRideDetails"
+            android:label="@string/app_name" >
+
+        </activity>
+
+        <activity
+            android:theme="@style/AppTheme"
+            android:name=".PostedRideList"
             android:label="@string/app_name" >
 
         </activity>
