--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,10 +105,24 @@
             android:label="@string/app_name" >
 
         </activity>
+        <activity
+            android:theme="@style/AppTheme"
+            android:name=".PassengerListActivity"
+            android:label="@string/app_name" >
+
+        </activity>
 
         <activity
             android:theme="@style/AppTheme"
             android:name=".RiderJoinActivity"
+            android:label="@string/app_name" >
+
+        </activity>
+
+
+        <activity
+            android:theme="@style/AppTheme"
+            android:name=".MyRidesList"
             android:label="@string/app_name" >
 
         </activity>
